# M-Security

./: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_GUIDE.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: aes_gcm_test.dart  argon2_test.dart  chacha20_test.dart  evfs_test.dart  hashing_test.dart  hkdf_test.dart  plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
integration_test/: aes_gcm_test.dart  compression_test.dart  evfs_enhancements_test.dart  evfs_test.dart  simple_test.dart  streaming_test.dart  vault_key_management_test.dart
ios/: m_security.podspec
ios/Classes/: MSecurityPlugin.swift
ios/m_security/: Package.swift
lib/: m_security.dart  m_security_method_channel.dart  m_security_platform_interface.dart  main.dart
lib/src/hashing/: argon2.dart
linux/: CMakeLists.txt  m_security_plugin.cc  m_security_plugin_private.h
linux/test/: m_security_plugin_test.cc
macos/: m_security.podspec
macos/Classes/: MSecurityPlugin.swift
macos/m_security/: Package.swift
rust/: .gitignore  .pubignore  Cargo.toml  build.rs  ffi-exports.map
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: error.rs  mod.rs  simple.rs  streaming.rs
rust/src/api/compression/: mod.rs  streaming.rs  zstd_impl.rs
rust/src/api/encryption/: aes_gcm.rs  chacha20.rs  mod.rs  noop.rs
rust/src/api/evfs/: format.rs  helpers.rs  mod.rs  segment.rs  tests.rs  types.rs  wal.rs
rust/src/api/evfs/tests/: allocator.rs  compression.rs  crud.rs  defragment.rs  delete.rs  export_import.rs  index_cache.rs  metadata.rs  mod.rs  parallel.rs  rename.rs  resize.rs  rotation.rs  streaming.rs
rust/src/api/hashing/: argon2.rs  blake3.rs  mod.rs  sha3.rs
rust/src/api/kdf/: hkdf.rs
rust/src/api/streaming/: compress.rs  crypto.rs  decrypt.rs  encrypt.rs  format.rs  hash.rs  mod.rs  tests.rs
rust/src/core/: error.rs  format.rs  mod.rs  rng.rs  secret.rs  streaming.rs  traits.rs
rust/src/core/compression/: brotli_impl.rs  mod.rs  streaming.rs  zstd_impl.rs
rust/src/core/evfs/: archive.rs  format.rs  mod.rs  segment.rs  wal.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_m_security.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_m_security.podspec
rust_builder/windows/: CMakeLists.txt
test/: m_security_method_channel_test.dart  m_security_test.dart
windows/: CMakeLists.txt  m_security_plugin.cpp  m_security_plugin.h  m_security_plugin_c_api.cpp
windows/test/: m_security_plugin_test.cpp
(+43 files in other folders)
