[package]
name = "rust_lib_m_security"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# FFI bridge
flutter_rust_bridge = "=2.11.1"

# Error handling
thiserror = "2.0"

# Randomness
rand = "0.8"

# Secure memory
zeroize = { version = "1.8", features = ["derive"] }

# Logging
log = "0.4"

# AEAD ciphers
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Hashing
blake3 = { version = "1.8", default-features = false, features = ["std"] }
sha3 = "0.10"

# KDF
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"

# Compression
zstd = { version = "0.13", optional = true }
brotli = { version = "7.0", optional = true }

[features]
default = []
compression = ["zstd", "brotli"]
testing = [] # exposes noop cipher — never enable in production builds

[profile.release]
panic = "abort"

[dev-dependencies]
hex = "0.4"
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
unwrap_used = "deny"
